Fixes and additions on expand-collapse functionality:
- Added "Expand All" button (blocking when cluster is active)
- Converted "Expand All", "Collapse All" to apply only on visible (not filtered-out) nodes

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -123,7 +123,7 @@ table {
     display:none;
 }
 
-#cluster-button, #decluster_all_button, #filter-button, #reset-filter-button, #colapse_all_button {
+.button.big_font {
 	font-size: 13px;
 }
 
